--- a/Korean/main/PersonalAssistant.apk/res/values-ko/strings.xml
+++ b/Korean/main/PersonalAssistant.apk/res/values-ko/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="access_change_text" formatted="false">%d 항목을 선택했습니다. 이 항목은 %d 와 병합됩니다.</string>
-    <string name="access_deselect">선택 해제된 %s</string>
-    <string name="access_deselected">선택 해제된 %s</string>
-    <string name="access_select">%s 항목을 선택했습니다.</string>
-    <string name="access_selected">선택한 %s</string>
-    <string name="access_unselect">%s 항목을 취소했습니다.</string>
+    <string name="access_deselect">%s 항목 선택 해제</string>
+    <string name="access_deselected">%s 항목 선택 해제</string>
+    <string name="access_select">%s 항목 선택</string>
+    <string name="access_selected">%s 항목 선택</string>
+    <string name="access_unselect">%s 항목 취소</string>
     <string name="accessibilty_back_button">반환</string>
     <string name="accessibilty_move_down">아래로 이동</string>
     <string name="accessibilty_move_up">위로 이동</string>
-    <string name="accordingto_position">자주 가는 장소를 GPS로 저장하기</string>
+    <string name="accordingto_position">GPS를 사용하여 자주 가는 장소 인식</string>
     <string name="account_address">주소</string>
     <string name="add_stock">추가</string>
-    <string name="add_to_desktop">홈 화면으로 추가</string>
+    <string name="add_to_desktop">홈 화면에 추가</string>
     <string name="address_name_spell">주소 입력</string>
     <string name="agenda">미리 알림</string>
     <string name="agenda_assistant">캘린더 일정</string>
@@ -22,14 +22,14 @@
     <string name="agenda_assistant_credit_payment">신용카드 납부일</string>
     <string name="agenda_assistant_electricity">전기세 납부일</string>
     <string name="agenda_assistant_empty">오늘 일정 없음</string>
-    <string name="agenda_assistant_finish">이벤트 완료함</string>
+    <string name="agenda_assistant_finish">이벤트 완료</string>
     <string name="agenda_assistant_gas">가스비 납부일</string>
     <string name="agenda_assistant_loan_payment">대출 상환</string>
     <string name="agenda_assistant_more">전체 일정</string>
     <string name="agenda_assistant_payment_day">납부일</string>
     <string name="agenda_assistant_repayment_day">납부일</string>
     <string name="agenda_assistant_tail_num">숫자</string>
-    <string name="agenda_i_known">알았다</string>
+    <string name="agenda_i_known">확인</string>
     <string name="agenda_need_install_alipay">이 기능을 사용하기 전에 Alipay를 설치하세요.</string>
     <string name="agenda_no_title">제목 없음</string>
     <string name="agenda_open">미리 알림 켜기</string>
@@ -366,6 +366,16 @@
     <string name="ball_dialog_title">앱을 먼저 설치하세요.</string>
     <string name="ball_football_recent_ing">진행 중</string>
     <string name="ball_hupu">후푸 스포츠</string>
+    <string name="base_hour12_format_en">hh:mm</string>
+    <string name="base_hour24_format_en">HH:mm</string>
+    <string name="base_hour_minute">%1$d시 %2$d분</string>
+    <string name="base_minute_second">mm:ss</string>
+    <string name="base_search_empty">찾을 수 없습니다.</string>
+    <string name="base_time_just_now">즉시</string>
+    <string name="base_time_month">MM/dd</string>
+    <string name="base_time_year">yyyy/MM/dd</string>
+    <string name="base_year_month_day_all_format_en">yyyy/MM/dd HH:mm:ss</string>
+    <string name="base_yesterday">어제</string>
     <string name="battery_history">배터리</string>
     <string name="beijing">베이징</string>
     <string name="bicycle">사이클링</string>
@@ -945,6 +955,58 @@
     <string name="flybird_verifying">확인 중…</string>
     <string name="flybird_yuan_bi">위안/펜</string>
     <string name="flybird_yuan_ri">전/일</string>
+    <string name="fmt_chinese_date">N월e</string>
+    <string name="fmt_date">D</string>
+    <string name="fmt_date_day">d일</string>
+    <string name="fmt_date_long_month">M월</string>
+    <string name="fmt_date_long_month_day">M월 d일</string>
+    <string name="fmt_date_long_year_month">yyyy년 M월</string>
+    <string name="fmt_date_long_year_month_day">yyyy년 M월 d일</string>
+    <string name="fmt_date_numeric_day">d</string>
+    <string name="fmt_date_numeric_month">M</string>
+    <string name="fmt_date_numeric_month_day">M/d</string>
+    <string name="fmt_date_numeric_year">yyyy</string>
+    <string name="fmt_date_numeric_year_month">yyyy/M</string>
+    <string name="fmt_date_numeric_year_month_day">yyyy/M/d</string>
+    <string name="fmt_date_short_month">MMM</string>
+    <string name="fmt_date_short_month_day">MMM d</string>
+    <string name="fmt_date_short_year_month">yyyy MMM</string>
+    <string name="fmt_date_short_year_month_day">yyyy MMM d</string>
+    <string name="fmt_date_time">D T</string>
+    <string name="fmt_date_time_timezone">D T z</string>
+    <string name="fmt_date_timezone">D z</string>
+    <string name="fmt_date_year">yyyy</string>
+    <string name="fmt_time">T</string>
+    <string name="fmt_time_12hour">h시</string>
+    <string name="fmt_time_12hour_minute">h:mm</string>
+    <string name="fmt_time_12hour_minute_pm">a h:mm</string>
+    <string name="fmt_time_12hour_minute_second">h:mm:ms</string>
+    <string name="fmt_time_12hour_minute_second_millis">h:mm:ss.S</string>
+    <string name="fmt_time_12hour_minute_second_millis_pm">a h:mm:ss.S</string>
+    <string name="fmt_time_12hour_minute_second_pm">a h:mm:ss</string>
+    <string name="fmt_time_12hour_pm">a h시</string>
+    <string name="fmt_time_24hour">"HH시</string>
+    <string name="fmt_time_24hour_minute">HH:mm</string>
+    <string name="fmt_time_24hour_minute_second">HH:mm:ss</string>
+    <string name="fmt_time_24hour_minute_second_millis">HH:mm:ss.S</string>
+    <string name="fmt_time_millis">"S'밀리초'"</string>
+    <string name="fmt_time_minute">"m'분'"</string>
+    <string name="fmt_time_minute_second">"m'분' s'초'"</string>
+    <string name="fmt_time_minute_second_millis">"m'분' s.S'초'"</string>
+    <string name="fmt_time_second">"s'초'"</string>
+    <string name="fmt_time_second_millis">"s.S'초'"</string>
+    <string name="fmt_time_timezone">T z</string>
+    <string name="fmt_timezone">z</string>
+    <string name="fmt_weekday">W</string>
+    <string name="fmt_weekday_date">W, D</string>
+    <string name="fmt_weekday_date_time">W, D T</string>
+    <string name="fmt_weekday_date_time_timezone">W, D T z</string>
+    <string name="fmt_weekday_date_timezone">W, D z</string>
+    <string name="fmt_weekday_long">EEEE</string>
+    <string name="fmt_weekday_short">E</string>
+    <string name="fmt_weekday_time">W T</string>
+    <string name="fmt_weekday_time_timezone">W T z</string>
+    <string name="fmt_weekday_timezone">W z</string>
     <string name="focus">팔로우</string>
     <string name="focus_stocks">주목하는 회사</string>
     <string name="function_aiqiyi_record">최근 동영살</string>
